array.island.Island.scala.error
Erreur de compilation :
Island:3: error: '(' expected but identifier found.
  if num[0]==4{
     ^